[metadata]
name = deckhand
summary = Airship document management and persistence tool.
description-file = README.rst

author = Deckhand team
home-page = http://airship-deckhand.readthedocs.io/en/latest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    deckhand

[entry_points]
oslo.config.opts =
    deckhand.conf = deckhand.conf.opts:list_opts

oslo.policy.policies =
    deckhand = deckhand.policies:list_rules
