[metadata]
name = Deckhand
summary = Storage service for YAML-based configuration documents, which are managed through version control and automatically validated.
description-file = README.rst
author = The Airship Authors
home-page = https://airship-deckhand.readthedocs.io/

classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    deckhand

[entry_points]
oslo.config.opts =
    deckhand.conf = deckhand.conf.opts:list_opts

oslo.policy.policies =
    deckhand = deckhand.policies:list_rules
