[metadata]
name = Deckhand
version = 1.1
summary = Storage service for YAML-based configuration documents, which are managed through version control and automatically validated.
description_file = README.rst
author = The Airship Authors
author_email = airship-discuss@lists.airshipit.org
home_page = https://airship-deckhand.readthedocs.io/

classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >=3.8


[files]
packages =
    deckhand
data_files =
    schemas = deckhand/engine/schemas/*

[entry_points]
oslo.config.opts =
    deckhand.conf = deckhand.conf.opts:list_opts

oslo.policy.policies =
    deckhand = deckhand.policies:list_rules
